# fun-with-numbers

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  \  fun_with_numbers.cpp  fun_with_numbers.cs  stats.txt
include/: ascii.hpp  classes.hpp  oof.h  tui.hpp  utils.hpp
src/: ascii.cpp  classes.cpp  factors_algo.cpp  fun_with_numbers.cpp  main.cpp  plot_numbers.cpp  tui.cpp  utils.cpp
